<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_id">473927026042044</string>
    <string name="app_name">UCevents</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup">Sign Up</string>
    <string name="forgetpass">Forget Password?</string>
    <string name="groupname">by Event Handlers</string>
    <string name="ucevents">UCevents</string>

    <color name="blue">#2F4963</color>

    <string name="events">Events</string>
    <string name="schedule">Schedule</string>
    <string name="back">Back</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">UCSD email</string>
    <string name="email_login">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="allEvents">All Events</string>
    <string name="byCategory">By Category</string>
    <string name ="interest">Interest</string>
    
    <string name="profile">Profile</string>
	<string name="about_me">About Me</string>
	<string name="select_interests">Select Interests</string>
	
	<string name="sports">Sports</string>
	<string name="food">Food</string>
	<string name="study">Study</string>
	<string name="career">Career</string>
	<string name="club">Club/Org</string>
	<string name="social">Social</string>
	<string name="sport">Sport</string>
	<string name ="other">Other</string>
	<string name="byUserInterest">User\'s Interests</string>
	<string name="editInterest">Edit Interests</string>
	<color name="yellow2">#FFFF66</color>
    <color name="WHITE">#FFFFFF</color>
</resources>
