<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search / will display always -->
    <item android:id="@+id/action_event"
          android:icon="@drawable/ic_action_computer"
          android:title="@string/events"
          android:showAsAction="always"/>
     
    <!-- Location Found -->
    <item android:id="@+id/action_schedule"
          android:icon="@drawable/ic_action_computer"
          android:title="@string/schedule"
          android:showAsAction="always" />
     
    <!-- Refresh -->
    <item android:id="@+id/action_profile"
          android:icon="@drawable/ic_action_computer"
          android:title="@string/profile"
          android:showAsAction="always" />
    
    <!-- Logout -->
    <item android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_computer"
        android:title="@string/logout"
        android:showAsAction="always"/>
</menu>