<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
         android:background="@drawable/blue_solid"
        tools:context=".DeviceFragment" >

    <Button
        android:id="@+id/ballEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor ="@color/WHITE"
        android:background="@drawable/light2"
        android:textSize="40dp"
        android:layout_weight="1"
        android:text="@string/allEvents" />

    <Button
        android:id="@+id/bbyCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor ="@color/WHITE"
        android:background="@drawable/medium2"
        android:layout_weight="1"
        android:textSize="40dp"
        android:text="@string/byCategory" />
    
    <Button
        android:id="@+id/bUserInterest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor ="@color/WHITE"
        android:background="@drawable/dark"
        android:layout_weight="1"
        android:textSize="40dp"
        android:text="@string/byUserInterest" />
    

</LinearLayout>